; ModuleID = '/home/carl/AnghaBench/libui/test/extr_page2.c_openAnotherWindow.c'
source_filename = "/home/carl/AnghaBench/libui/test/extr_page2.c_openAnotherWindow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"Another Window\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"Button\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @openAnotherWindow to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @openAnotherWindow(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = icmp ne i8* %7, null
  %9 = zext i1 %8 to i32
  %10 = call i32* @uiNewWindow(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 100, i32 100, i32 %9)
  store i32* %10, i32** %5, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %29

13:                                               ; preds = %2
  %14 = call i32* (...) @uiNewVerticalBox()
  store i32* %14, i32** %6, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = call i32* (...) @uiNewEntry()
  %17 = call i32 @uiControl(i32* %16)
  %18 = call i32 @uiBoxAppend(i32* %15, i32 %17, i32 0)
  %19 = load i32*, i32** %6, align 8
  %20 = call i32* @uiNewButton(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %21 = call i32 @uiControl(i32* %20)
  %22 = call i32 @uiBoxAppend(i32* %19, i32 %21, i32 0)
  %23 = load i32*, i32** %6, align 8
  %24 = call i32 @uiBoxSetPadded(i32* %23, i32 1)
  %25 = load i32*, i32** %5, align 8
  %26 = load i32*, i32** %6, align 8
  %27 = call i32 @uiControl(i32* %26)
  %28 = call i32 @uiWindowSetChild(i32* %25, i32 %27)
  br label %34

29:                                               ; preds = %2
  %30 = load i32*, i32** %5, align 8
  %31 = call i32* (...) @makePage6()
  %32 = call i32 @uiControl(i32* %31)
  %33 = call i32 @uiWindowSetChild(i32* %30, i32 %32)
  br label %34

34:                                               ; preds = %29, %13
  %35 = load i32*, i32** %5, align 8
  %36 = call i32 @uiWindowSetMargined(i32* %35, i32 1)
  %37 = load i32*, i32** %5, align 8
  %38 = call i32 @uiControl(i32* %37)
  %39 = call i32 @uiControlShow(i32 %38)
  ret void
}

declare dso_local i32* @uiNewWindow(i8*, i32, i32, i32) #1

declare dso_local i32* @uiNewVerticalBox(...) #1

declare dso_local i32 @uiBoxAppend(i32*, i32, i32) #1

declare dso_local i32 @uiControl(i32*) #1

declare dso_local i32* @uiNewEntry(...) #1

declare dso_local i32* @uiNewButton(i8*) #1

declare dso_local i32 @uiBoxSetPadded(i32*, i32) #1

declare dso_local i32 @uiWindowSetChild(i32*, i32) #1

declare dso_local i32* @makePage6(...) #1

declare dso_local i32 @uiWindowSetMargined(i32*, i32) #1

declare dso_local i32 @uiControlShow(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
